--- a/style.css
+++ b/style.css
@@ -1181,13 +1181,15 @@ object {
       padding: 5px; } }
 @media screen and (min-width: 641px) and (max-width: 1024px) {
   .content-area {
-    font-size: 16px;
+    font-size: 16px; }
+
+  .single-post .content-area {
     padding: 0 5em; }
-    .content-area .entry-content .alignleft {
+    .single-post .content-area .entry-content .alignleft {
       margin-left: -5em; }
-    .content-area .entry-content .alignright {
+    .single-post .content-area .entry-content .alignright {
       margin-right: -5em; }
-    .content-area .entry-header .post-attachment {
+    .single-post .content-area .entry-header .post-attachment {
       margin-left: calc(-5em - 10px);
       width: calc(100% + (5em + 10px) * 2); } }
 @media screen and (max-width: 1024px) {
